# zensen.rs

./: Cargo.toml  README.md
examples/grid/: Cargo.toml
examples/grid/src/: main.rs
examples/textbox/: Cargo.toml
examples/textbox/src/: main.rs  theme.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: component.rs  lib.rs  main.rs  style.rs  tree.rs
src/examples/: grid.rs
src/style/: border.rs  common.rs  layout.rs  mod.rs  text.rs
src/styling/: background.rs  border.rs  common.rs  font.rs  frame.rs  layout.rs  mod.rs  text.rs
src/test/: tree.rs
