[package]
name = "zensen"
description = "A browser-like UI framework for Rust"
version = "0.1.0"
authors = ["travistrue2008 <travis.true08@gmail.com>"]
edition = "2018"
license = "MIT"

[[example]]
name = "grid"
path = "examples/grid/src/main.rs"

[dev-dependencies]
speculate = "0.1"

[dependencies]
macros = { path = "./macros" }
# gl_toolkit = { git = "https://github.com/travistrue2008/gl-toolkit-rs" }

[workspace]
members = [
	".",
	"macros",
]
